@@ -42,7 +42,7 @@
 3) Make DTLS network model the same as UDP. That would also allow DTLS
 in Cygwin / MS WIndows.
 
-4) explore different TLS options.
+4) explore support for different TLS options (1.1, 1.2).
 
 ==================================================================
 
