@@ -1,5 +1,5 @@
-.\"Text automatically generated by txt2man
-.TH TURN 1 "27 July 2013" "" ""
+.\" Text automatically generated by txt2man
+.TH TURN 1 "30 July 2013" "" ""
 .SH GENERAL INFORMATION
 
 A set of turnutils_* programs provides some utility functionality to be used
